# api-money-control

./: .env-template  Pipfile  README.md  pyproject.toml
app/: main.py
app/database/: connection.py  init_db.py  models.py
app/db/: models.py
app/migrations/: env.py
app/migrations/versions/: 698f9cc0218d_add_categories_table.py  73dc8acbe028_add_expenses_table.py  ab593b55278e_add_users_table.py
app/routes/: category_routes.py  deps.py  expense_routes.py  user_routes.py
app/schemas/: category.py  expense.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_expense_routes.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_expense_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_cases.py  test_expense_use_case.py  test_user_use_cases.py
app/use_cases/: category.py  expense.py  user.py
